--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
       <div class="container px-3 mx-auto flex flex-wrap flex-col md:flex-row items-center">
         <!--Left Col-->
         <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
-          <p class="uppercase tracking-loose w-full">What business are you?</p>
+          <p class="uppercase tracking-loose w-full">comms.jp</p>
           <h1 class="my-4 text-5xl font-bold leading-tight">
             Excellent translations you can trust
           </h1>
           <p class="leading-normal text-2xl mb-8">
-            Affordable and high quality.
+            Affordable and high quality Japanese to English translations.
           </p>
           <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
             Contact
