--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             id="navAction"
             class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out"
           >
-            Contact
+            <a href="mailto:info@comms.jp">Contact</a>
           </button>
         </div>
       </div>
@@ -72,7 +72,7 @@
             Affordable and high quality Japanese to English translations.
           </p>
           <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-            Contact
+            <a href="mailto:info@comms.jp">Contact</a>
           </button>
         </div>
         <!--Right Col-->
