--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
         <!--Right Col-->
         <div class="w-full md:w-3/5 py-6 text-center">
-          <img class="w-full md:w-4/5 z-50" src="hero.png" />
+          <img class="w-full md:w-4/5 z-50" src="hero1.png" />
         </div>
       </div>
     </div>
@@ -117,10 +117,6 @@
               All our translations are edited by a native English speaker.
               <br />
               <br />
-
-              Images from:
-
-              <a class="text-pink-500 underline" href="https://undraw.co/">undraw.co</a>
             </p>
           </div>
           <div class="w-full sm:w-1/2 p-6">
@@ -410,9 +406,6 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at ipsum eu nunc commodo posuere et sit amet ligula.
                 <br />
                 <br />
-                Images from:
-
-                <a class="text-pink-500 underline" href="https://undraw.co/">undraw.co</a>
               </p>
             </div>
           </div>
@@ -631,6 +624,7 @@
           </div>
         </div>
       </div>
+      Images by <a href="https://www.freepik.com/free-vector/flat-design-business-communication-concept_19948912.htm#query=communications&position=2&from_view=search&track=sph">Freepik</a>
     </footer>
     <!-- jQuery if you need it
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
