--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="container px-3 mx-auto flex flex-wrap flex-col md:flex-row items-center">
         <!--Left Col-->
         <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
-          <p class="uppercase tracking-loose w-full">comms.jp</p>
+          <p class="tracking-loose w-full">comms.jp</p>
           <h1 class="my-4 text-5xl font-bold leading-tight">
             Excellent translations you can trust
           </h1>
