--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           </div>
           <div class="w-full sm:w-1/2 p-6">
 
-<img src="series.png">
+<img src="series.jpg">
 
           </div>
         </div>
