--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <p class="text-gray-600 mb-8">
               All our translations are edited by a native English speaker.
               <br />
-              Our translators are bilingual and have over two decades of experience translating in Japan.
+              Our translators and editors are bilingual and have over two decades of experience translating in Japan.
               <br />
             </p>
           </div>
