--- a/index.html
+++ b/index.html
@@ -129,17 +129,18 @@
         <div class="flex flex-wrap flex-col-reverse sm:flex-row">
           <div class="w-full sm:w-1/2 p-6 mt-6">
 
-<!-- image here -->
+<img src="tasks.png">
 
           </div>
           <div class="w-full sm:w-1/2 p-6 mt-6">
             <div class="align-middle">
               <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-                Lorem ipsum dolor sit amet
+                Academic quality
               </h3>
               <p class="text-gray-600 mb-8">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at ipsum eu nunc commodo posuere et sit amet ligula.
+                Our team are current and former academics with a broad range of experience and specialities.
                 <br />
+                Contact us for a free consultation if you have particular requirements for technical or specialist content. 
                 <br />
               </p>
             </div>
