--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           </div>
           <div class="w-full sm:w-1/2 p-6">
 
-<img src="series.jpg">
+<img src="series.png">
 
           </div>
         </div>
