--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20" id="nav-content">
           <ul class="list-reset lg:flex justify-end flex-1 items-center">
             <li class="mr-3">
-              <a class="inline-block py-2 px-4 text-black font-bold no-underline" href="#">日本語</a>
+              <a class="inline-block py-2 px-4 text-black no-underline" href="#">日本語</a>
             </li>
           </ul>
 <button
