--- a/index.html
+++ b/index.html
@@ -277,7 +277,14 @@
               comms.jp
             </a>
           </div>
-          <p>Images by <a href="https://www.freepik.com/free-vector/flat-design-business-communication-concept_19948912.htm#query=communications&position=2&from_view=search&track=sph">Freepik</a></p>
+          <div class="flex-1">
+            <p class="uppercase text-gray-500 md:mb-6">Credits</p>
+            <ul class="list-reset mb-6">
+              <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                Images by <a href="https://www.freepik.com/free-vector/flat-design-business-communication-concept_19948912.htm#query=communications&position=2&from_view=search&track=sph">Freepik</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </footer>
