--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               Native English editing included
             </h3>
             <p class="text-gray-600 mb-8">
-              All our translations are edited by a native English speaker.
+              All our translations are edited by native English speakers.
               <br />
               Our translators and editors are bilingual and have over two decades of experience translating in Japan.
               <br />
@@ -140,7 +140,7 @@
               <p class="text-gray-600 mb-8">
                 Our team are current and former academics with a broad range of experience and specialities.
                 <br />
-                Contact us for a free consultation if you have particular requirements for technical or specialist content. 
+                Contact us for a free consultation if you have particular requirements for technical or specialist content.
                 <br />
               </p>
             </div>
