--- a/index.ja.html
+++ b/index.ja.html
@@ -66,7 +66,7 @@
         <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
           <p class="tracking-loose w-full">comms.jp</p>
           <h1 class="my-4 text-5xl font-bold leading-tight">
-            Excellent translations you can trust
+            信頼できる翻訳
           </h1>
           <p class="leading-normal text-2xl mb-8">
             Affordable and high quality Japanese to English translations.
@@ -103,7 +103,7 @@
     <section class="bg-white border-b py-8">
       <div class="container max-w-5xl mx-auto m-8">
         <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">
-          Quality translation
+          高品質な翻訳
         </h2>
         <div class="w-full mb-4">
           <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
@@ -111,7 +111,7 @@
         <div class="flex flex-wrap">
           <div class="w-5/6 sm:w-1/2 p-6">
             <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-              Native English editing included
+              英語ネイティヴチェックを含む
             </h3>
             <p class="text-gray-600 mb-8">
               All our translations are edited by native English speakers.
@@ -135,7 +135,7 @@
           <div class="w-full sm:w-1/2 p-6 mt-6">
             <div class="align-middle">
               <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-                Academic quality
+                学術的な品質
               </h3>
               <p class="text-gray-600 mb-8">
                 Our team are current and former academics with a broad range of experience and specialities.
