--- a/index.ja.html
+++ b/index.ja.html
@@ -69,7 +69,7 @@
             信頼できる翻訳
           </h1>
           <p class="leading-normal text-2xl mb-8">
-            Affordable and high quality Japanese to English translations.
+            お手頃な価格で高品質な日英翻訳を提供します。
           </p>
           <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
             <a href="mailto:info@comms.jp">Contact</a>
@@ -114,9 +114,9 @@
               英語ネイティヴチェックを含む
             </h3>
             <p class="text-gray-600 mb-8">
-              All our translations are edited by native English speakers.
+              すべての翻訳原稿は英語ネイティブスピーカーがチェックします。
               <br />
-              Our translators and editors are bilingual and have over two decades of experience translating in Japan.
+              当社の翻訳者と編集者は全員バイリンガルで、日本で20年間以上の翻訳経験があります。
               <br />
             </p>
           </div>
@@ -138,9 +138,9 @@
                 学術的な品質
               </h3>
               <p class="text-gray-600 mb-8">
-                Our team are current and former academics with a broad range of experience and specialities.
+                当社のチーム全員は幅広い経験と専門知識を持つ現役の学者と元学者です。
                 <br />
-                Contact us for a free consultation if you have particular requirements for technical or specialist content.
+                技術的な内容や専門性が高い文章について無料相談を受け付けております。
                 <br />
               </p>
             </div>
