--- a/websites.html
+++ b/websites.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>comms.jp</title>
-    <meta name="description" content="信頼できる翻訳" />
+    <meta name="description" content="Secure, simple websites" />
     <meta name="keywords" content="" />
     <meta name="author" content="" />
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
@@ -46,16 +46,16 @@
         <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20" id="nav-content">
           <ul class="list-reset lg:flex justify-end flex-1 items-center">
             <li class="mr-3">
-              <a class="inline-block py-2 px-4 text-black no-underline" href="index.ja.html">翻訳</a>
+              <a class="inline-block py-2 px-4 text-black no-underline" href="index.html">Translations</a>
             </li>
             <li class="mr-3">
-              <a class="inline-block py-2 px-4 text-black no-underline" href="websites.ja.html">ウェブサイト</a>
+              <a class="inline-block py-2 px-4 text-black no-underline" href="websites.html">Websites</a>
             </li>
             <li class="mr-3">
-              <a class="inline-block py-2 px-4 text-black no-underline" href="mailto:info@comms.jp">お問い合わせ</a>
+              <a class="inline-block py-2 px-4 text-black no-underline" href="mailto:info@comms.jp">Contact</a>
             </li>
             <li class="mr-3">
-              <a class="inline-block py-2 px-4 text-black no-underline" href="index.html"><img src="uk.png" width="32" alt="Flag of UK, click for English page"></a>
+              <a class="inline-block py-2 px-4 text-black no-underline" href="index.ja.html"><img src="japan.png" width="32" alt="Flag of Japan, click for Japanese page"></a>
             </li>
           </ul>
         </div>
@@ -69,10 +69,10 @@
         <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
           <p class="tracking-loose w-full">comms.jp</p>
           <h1 class="my-4 text-5xl font-bold leading-tight">
-            信頼できる翻訳
+            Secure, simple websites
           </h1>
           <p class="leading-normal text-2xl mb-8">
-            お手頃な価格で高品質な日英翻訳を提供します。
+            Affordable and high quality websites for your company or group.
           </p>
           <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
             <a href="mailto:info@comms.jp">Contact</a>
@@ -80,7 +80,7 @@
         </div>
         <!--Right Col-->
         <div class="w-full md:w-3/5 py-6 text-center">
-          <img class="w-full md:w-4/5 z-50" src="translations.png" />
+          <img class="w-full md:w-4/5 z-50" src="website.png" />
         </div>
       </div>
     </div>
@@ -106,7 +106,7 @@
     <section class="bg-white border-b py-8">
       <div class="container max-w-5xl mx-auto m-8">
         <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">
-          高品質な翻訳
+          Secure websites
         </h2>
         <div class="w-full mb-4">
           <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
@@ -114,12 +114,12 @@
         <div class="flex flex-wrap">
           <div class="w-5/6 sm:w-1/2 p-6">
             <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-              英語ネイティヴチェックを含む
+              Only static HTML exposed
             </h3>
             <p class="text-gray-600 mb-8">
-              すべての翻訳原稿は英語ネイティブスピーカーがチェックします。
+              All our websites are built using the Hugo static site generator (SSG).
               <br />
-              当社の翻訳者と編集者は全員バイリンガルで、日本で20年間以上の翻訳経験があります。
+              Only static HTML is posted to the web, reducing the possibility of attack on your site.
               <br />
             </p>
           </div>
@@ -138,48 +138,14 @@
           <div class="w-full sm:w-1/2 p-6 mt-6">
             <div class="align-middle">
               <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-                学術的な品質
+                Hosted with Cloudflare pages
               </h3>
               <p class="text-gray-600 mb-8">
-                当社のチーム全員は幅広い経験と専門知識を持つ現役の学者と元学者です。
+                Sites are hosted with the Cloudflare pages service. Cloudflare is the backbone on the internet, so your pages are as secure as is possible online.
                 <br />
-                技術的な内容や専門性が高い文章について無料相談を受け付けております。
+                Contact us for a free consultation if you have particular requirements for your website.
                 <br />
               </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="bg-white border-b py-8">
-      <div class="container mx-auto flex flex-wrap pt-4 pb-12">
-        <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">
-          料金
-        </h2>
-        <div class="w-full mb-4">
-          <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
-        </div>
-        <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
-          <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
-            <a href="#" class="flex flex-wrap no-underline hover:no-underline">
-              <p class="w-full text-gray-600 text-xs md:text-sm px-6">
-                翻訳
-              </p>
-              <div class="w-full font-bold text-xl text-gray-800 px-6">
-                日本語原稿の英訳
-              </div>
-              <p class="text-gray-800 text-base px-6 mb-5">
-                日本語テキスト1字20円。<br><br>
-                （日本語原稿はテキストで提供される場合。画像や印刷物からの英訳について無料相談またはお見積もりをお問い合わせください。)
-              </p>
-            </a>
-          </div>
-          <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
-            <div class="flex items-center justify-start">
-              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-                Contact
-              </button>
             </div>
           </div>
         </div>
@@ -211,13 +177,13 @@
     </svg>
     <section class="container mx-auto text-center py-6 mb-12">
       <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-white">
-        お問い合わせ
+        Contact
       </h2>
       <div class="w-full mb-4">
         <div class="h-1 mx-auto bg-white w-1/6 opacity-25 my-0 py-0 rounded-t"></div>
       </div>
       <h3 class="my-4 text-3xl leading-tight">
-        無料相談や見積もりについてご連絡をお待ちしております。
+        Email us for a free quote or consultation.
       </h3>
       <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
         <a href="mailto:info@comms.jp">info@comms.jp</a>
