--- a/websites.html
+++ b/websites.html
@@ -55,7 +55,7 @@
               <a class="inline-block py-2 px-4 text-black no-underline" href="mailto:info@comms.jp">Contact</a>
             </li>
             <li class="mr-3">
-              <a class="inline-block py-2 px-4 text-black no-underline" href="index.ja.html"><img src="japan.png" width="32" alt="Flag of Japan, click for Japanese page"></a>
+              <a class="inline-block py-2 px-4 text-black no-underline" href="index.ja.html"><img src="../japan.png" width="32" alt="Flag of Japan, click for Japanese page"></a>
             </li>
           </ul>
         </div>
@@ -125,14 +125,14 @@
           </div>
           <div class="w-full sm:w-1/2 p-6">
 
-<img src="series.png">
+<img src="../series.png">
 
           </div>
         </div>
         <div class="flex flex-wrap flex-col-reverse sm:flex-row">
           <div class="w-full sm:w-1/2 p-6 mt-6">
 
-<img src="tasks.png">
+<img src="../tasks.png">
 
           </div>
           <div class="w-full sm:w-1/2 p-6 mt-6">
